# test-task

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: __init__.py  user.py
app/core/: config.py
app/db/: base.py
app/migrations/: env.py
app/migrations/versions/: 669013245b60_init_database.py
app/models/: user.py
app/schemas/: __init__.py  user.py
app/service/: __init__.py  base.py  user.py  user_db.py  user_memory.py
