[project]
name = "test-task"
version = "1"
description = "test assignment for an internship"
authors = [
    {name = "StroylovV",email = "spartan9611@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "fastapi[standard] (>=0.137.1,<0.138.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "psycopg-binary (>=3.3.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
